[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/title_screen.gd" type="Script" id=1]
[ext_resource path="res://menus/elianto_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/elianto_32.tres" type="DynamicFont" id=3]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 30.0
margin_right = -40.0
margin_bottom = -30.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30

[node name="Label" type="Label" parent="VSplitContainer"]
margin_right = 464.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.984375, 0.438354, 0.438354, 1 )
custom_colors/font_color_shadow = Color( 0.161514, 0.566406, 0.556917, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
text = "DARE TO SHARE"
align = 1

[node name="Buttons" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 78.0
margin_right = 464.0
margin_bottom = 275.0
size_flags_horizontal = 7
custom_constants/separation = 15
alignment = 1

[node name="newgame" type="Button" parent="VSplitContainer/Buttons"]
margin_right = 464.0
margin_bottom = 38.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
action_mode = 0
enabled_focus_mode = 0
text = "New Game"
flat = true

[node name="Options" type="Button" parent="VSplitContainer/Buttons"]
margin_top = 53.0
margin_right = 464.0
margin_bottom = 91.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
action_mode = 0
enabled_focus_mode = 0
text = "Options"
flat = true

[node name="Tutorial" type="Button" parent="VSplitContainer/Buttons"]
margin_top = 106.0
margin_right = 464.0
margin_bottom = 144.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
action_mode = 0
enabled_focus_mode = 0
text = "Tutorial"
flat = true

[node name="Credits" type="Button" parent="VSplitContainer/Buttons"]
margin_top = 159.0
margin_right = 464.0
margin_bottom = 197.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
action_mode = 0
enabled_focus_mode = 0
text = "Credits"
flat = true

[connection signal="pressed" from="VSplitContainer/Buttons/newgame" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="VSplitContainer/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VSplitContainer/Buttons/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VSplitContainer/Buttons/Credits" to="." method="_on_Credits_pressed"]
